--- a/pages/channel_member.html
+++ b/pages/channel_member.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav class="detail_page_top position border">
         <button class="back_btn">
-            <img src="/img/close_btn.svg" alt="">
+            <img src="../img/close_btn.svg" alt="">
         </button>
 
         <div class="story_tit">
@@ -37,19 +37,19 @@
 
                     <div class="detail">
                         <div class="profile_img">
-                            <img src="/img/no_image.jpg" alt="">
+                            <img src="../img/no_image.jpg" alt="">
                         </div>
                         <div class="content">
                             <p>채널이름</p>
                             <div>
-                                <img src="/img/level.svg" alt="">
+                                <img src="../img/level.svg" alt="">
                                 <span>채널등급</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="go_btn">
-                        <img src="/img/arrow_right.svg" alt="">
+                        <img src="../img/arrow_right.svg" alt="">
                     </div>
 
                 </div>
@@ -70,19 +70,19 @@
 
                     <div class="detail">
                         <div class="profile_img">
-                            <img src="/img/no_image.jpg" alt="">
+                            <img src="../img/no_image.jpg" alt="">
                         </div>
                         <div class="content">
                             <p>채널이름</p>
                             <div>
-                                <img src="/img/level.svg" alt="">
+                                <img src="../img/level.svg" alt="">
                                 <span>채널등급</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="go_btn">
-                        <img src="/img/arrow_right.svg" alt="">
+                        <img src="../img/arrow_right.svg" alt="">
                     </div>
 
                 </div>
@@ -103,19 +103,19 @@
 
                     <div class="detail">
                         <div class="profile_img">
-                            <img src="/img/no_image.jpg" alt="">
+                            <img src="../img/no_image.jpg" alt="">
                         </div>
                         <div class="content">
                             <p>채널이름</p>
                             <div>
-                                <img src="/img/level.svg" alt="">
+                                <img src="../img/level.svg" alt="">
                                 <span>채널등급</span>
                             </div>
                         </div>
                     </div>
 
                     <div class="go_btn">
-                        <img src="/img/arrow_right.svg" alt="">
+                        <img src="../img/arrow_right.svg" alt="">
                     </div>
 
                 </div>
