--- a/pages/live.html
+++ b/pages/live.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
@@ -14,16 +14,16 @@
         <div class="live_top">
             <div class="left">
                 <div>
-                    <img src="/img/main_live_icon@1x.png" alt="라이브아이콘">
+                    <img src="../img/main_live_icon@1x.png" alt="라이브아이콘">
                 </div>
  
                 <div class="icon_wrap">
-                    <img src="/img/union_02.png" alt="">
+                    <img src="../img/union_02.png" alt="">
                     32
                 </div>
 
                 <div class="icon_wrap">
-                    <img src="/img/union_02.png" alt="">
+                    <img src="../img/union_02.png" alt="">
                     32
                 </div>
             </div>
@@ -31,26 +31,26 @@
 
             <div class="right">
                 <button>
-                    <img src="/img/live_right_icon_01.svg" alt="">
+                    <img src="../img/live_right_icon_01.svg" alt="">
                 </button>
 
                 <button>
-                    <img src="/img/live_right_icon_02.svg" alt="">
+                    <img src="../img/live_right_icon_02.svg" alt="">
                 </button>
 
                 <button>
-                    <img src="/img/live_right_icon_03.svg" alt="">
+                    <img src="../img/live_right_icon_03.svg" alt="">
                 </button>
 
                 <button>
-                    <img src="/img/live_right_icon_04.svg" alt="">
+                    <img src="../img/live_right_icon_04.svg" alt="">
                 </button>
             </div>
         </div>
 
         <div class="row live_profile">
             <div class="profile_img">
-                <img src="/img/no_image.jpg" alt="">
+                <img src="../img/no_image.jpg" alt="">
             </div>
 
             <div class="info">
@@ -69,7 +69,7 @@
         <!--채팅창-->
         <div class="live_bottom row">
             <div class="profile_img">
-                <img src="/img/no_image.jpg" alt="">
+                <img src="../img/no_image.jpg" alt="">
             </div>
 
             <div class="right">
@@ -79,11 +79,11 @@
 
                 <div class="btn_wrap">
                     <button>
-                        <img src="/img/commet_white.svg" alt="">
+                        <img src="../img/commet_white.svg" alt="">
                     </button>
     
                     <button>
-                        <img src="/img/heart_white.svg" alt="">
+                        <img src="../img/heart_white.svg" alt="">
                     </button>
                 </div>
          
@@ -96,7 +96,7 @@
         <!--상품정보-->
         <div class="product_info">
             <div class="img">
-                <img src="/img/no_image.jpg" alt="">
+                <img src="../img/no_image.jpg" alt="">
             </div>
 
             <div class="cnt">
@@ -113,11 +113,11 @@
         <!--left 전체채팅/쇼핑카트-->
         <div class="live_left">
             <div>
-                <img src="/img/all_chat.svg" alt="채팅목록보기">
+                <img src="../img/all_chat.svg" alt="채팅목록보기">
             </div>
 
             <div>
-                <img src="/img/shopping_cart_white.svg" alt="장바구니">
+                <img src="../img/shopping_cart_white.svg" alt="장바구니">
             </div>
         </div>
         <!--//left 전체채팅/쇼핑카트-->
