--- a/pages/member/step3.html
+++ b/pages/member/step3.html
@@ -8,14 +8,14 @@
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-    <link rel="stylesheet" href="/css/style.css"> 
+    <link rel="stylesheet" href="../../css/style.css">
 
 </head>
 <body>
 
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../../img/back_btn.png" alt="">
         </button>
 
         <div class="story_tit">
