--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <span>내정보</span>
 
         <button class="shopping_cart_btn">
-            <img src="/img/shopping_cart.png" alt="">
+            <img src="../img/shopping_cart.png" alt="">
         </button>   
     </nav>
 
@@ -28,7 +28,7 @@
             <div class="profile">
                 <div class="row">
                     <div class="img">
-                        <img src="/img/no_image.jpg"/>
+                        <img src="../img/no_image.jpg"/>
                     </div>
     
                     <div class="text">
@@ -41,42 +41,42 @@
             <div class="mypage_category_link">
                 <div>
                     <div>
-                        <img src="/img/mypage/mypage_01.svg" alt="">
+                        <img src="../img/mypage/mypage_01.svg" alt="">
                         <span>쿠폰함</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage/mypage_02.svg" alt="">
+                        <img src="../img/mypage/mypage_02.svg" alt="">
                         <span>포인트</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage/mypage_03.svg" alt="">
+                        <img src="../img/mypage/mypage_03.svg" alt="">
                         <span>찜 목록</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage/mypage_04.svg" alt="">
+                        <img src="../img/mypage/mypage_04.svg" alt="">
                         <span>나의 쇼핑</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage/mypage_05.svg" alt="">
+                        <img src="../img/mypage/mypage_05.svg" alt="">
                         <span>나의 스토어</span>
                     </div>
                 </div>
 
                 <div>
                     <div>
-                        <img src="/img/mypage/mypage_06.svg" alt="">
+                        <img src="../img/mypage/mypage_06.svg" alt="">
                         <span>나의 채널</span>
                     </div>
                 </div>
@@ -91,29 +91,29 @@
 
             <div>
                 <div>
-                    <img src="/img/mypage/mypage_bottom_icon_01.svg" alt="">
+                    <img src="../img/mypage/mypage_bottom_icon_01.svg" alt="">
                     <p>공지사항</p>
                 </div>
 
-                <img class="right_move_btn" src="/img/move_right_icon.png" alt="이동 버튼">
+                <img class="right_move_btn" src="../img/move_right_icon.png" alt="이동 버튼">
             </div>
 
             <div>
                 <div>
-                    <img src="/img/mypage/mypage_bottom_icon_02.svg" alt="">
+                    <img src="../img/mypage/mypage_bottom_icon_02.svg" alt="">
                     <p>자주 묻는 질문</p>
                 </div>
 
-                <img class="right_move_btn" src="/img/move_right_icon.png" alt="이동 버튼" />
+                <img class="right_move_btn" src="../img/move_right_icon.png" alt="이동 버튼" />
             </div>
 
             <div>
                 <div>
-                    <img src="/img/mypage/mypage_bottom_icon_03.svg" alt="">
+                    <img src="../img/mypage/mypage_bottom_icon_03.svg" alt="">
                     <p>고객센터</p>
                 </div>
 
-                <img class="right_move_btn" src="/img/move_right_icon.png" alt="이동 버튼" />
+                <img class="right_move_btn" src="../img/move_right_icon.png" alt="이동 버튼" />
             </div>
             
         </div>
