--- a/pages/notification.html
+++ b/pages/notification.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     
     <nav class="detail_page_top border">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <div>
@@ -39,7 +39,7 @@
 
                 <div class="content">
                     <div class="profile_img">
-                        <img src="/img/no_image.jpg" alt="">
+                        <img src="../img/no_image.jpg" alt="">
                     </div>
 
                     <div class="cnt">
