--- a/pages/request.html
+++ b/pages/request.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav class="detail_page_top border">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <div>
@@ -41,7 +41,7 @@
             <p>참고사진</p> 
             <div class="Reference_picture">
                 <div class="Reference_picture_add">
-                    <img src="/img/plus.png" alt="">
+                    <img src="../img/plus.png" alt="">
                 </div>
             </div>
         </div>
