--- a/pages/requestDetail.html
+++ b/pages/requestDetail.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     <nav class="detail_page_top border">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <div>
@@ -48,11 +48,11 @@
                 <!--참고사진-->
                 <div>
                     <div class="cnt">
-                        <img src="/img/no_image.jpg" alt="">
+                        <img src="../img/no_image.jpg" alt="">
                     </div>
 
                     <div class="cnt">
-                        <img src="/img/no_image.jpg" alt="">
+                        <img src="../img/no_image.jpg" alt="">
                     </div>
                 </div>
                 <!--//참고사진-->
