--- a/pages/shoppingCart.html
+++ b/pages/shoppingCart.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <nav class="detail_page_top border">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <div class="story_tit">
@@ -21,7 +21,7 @@
         </div>
 
         <button class="shopping_cart_btn">
-            <img src="/img/header_btn_search@1x.png" alt="">
+            <img src="../img/header_btn_search@1x.png" alt="">
         </button>
     </nav>
 
@@ -63,7 +63,7 @@
 
                     <div class="product_cnt">
                         <div class="img">
-                            <img src="/img/no_image.jpg" alt="">
+                            <img src="../img/no_image.jpg" alt="">
                         </div>
 
                         <div class="cnt">
@@ -105,7 +105,7 @@
 
                     <div class="product_cnt">
                         <div class="img">
-                            <img src="/img/no_image.jpg" alt="">
+                            <img src="../img/no_image.jpg" alt="">
                         </div>
 
                         <div class="cnt">
