--- a/pages/storyComment.html
+++ b/pages/storyComment.html
@@ -7,13 +7,13 @@
     <title>Document</title>
 
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <div class="story_tit">
@@ -27,7 +27,7 @@
 
             <div class="message_wrap row">
                 <div class="profile_img">
-                    <img src="/img/no_image.jpg" alt="">
+                    <img src="../img/no_image.jpg" alt="">
                 </div>
 
                 <div class="input_box">
@@ -40,7 +40,7 @@
             <div class="empty">
                 <div class="content">
                     <div class="img">
-                        <img src="/img/Comments.svg" alt="" class="comments_icon">
+                        <img src="../img/Comments.svg" alt="" class="comments_icon">
                     </div>
     
                     <p>스토리에 댓글이 없습니다.</p>
