--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
 
     <!--css-->
-    <link rel="stylesheet" href="/css/common.css" type="text/css">
-    <link rel="stylesheet" href="/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./css/common.css" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
     <!--//css-->
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -32,25 +32,25 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">메인</h2>
             <ul>
-                <li><a href="/pages/main.html">main</a></li>
+                <li><a href="./pages/main.html">main</a></li>
             </ul>
         </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상점</h2>
             <ul>
-                <li><a href="/pages/storeList.html">storelist</a></li>
-                <li><a href="/pages/storeinfo.html">store_detail</a></li>
+                <li><a href="./pages/storeList.html">storelist</a></li>
+                <li><a href="./pages/storeinfo.html">store_detail</a></li>
             </ul>            
         </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">채널</h2>
             <ul>
-                <li><a href="/pages/channelList.html">channelList</a></li>
-                <li><a href="/pages/channelInfo.html">channelInfo</a></li>
-                <li><a href="/pages/channel_member.html">channel_member</a></li>
-                <li><a href="/pages/channelQuestion.html">channelQuestion</a></li>
+                <li><a href="./pages/channelList.html">channelList</a></li>
+                <li><a href="./pages/channelInfo.html">channelInfo</a></li>
+                <li><a href="./pages/channel_member.html">channel_member</a></li>
+                <li><a href="./pages/channelQuestion.html">channelQuestion</a></li>
             </ul> 
         </div>
 
@@ -58,24 +58,24 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">스토리</h2>
             <ul>
-                <li><a href="/pages/storydetail.html">storydetail</a></li>
-                <li><a href="/pages/storyComment.html">storyComment</a></li>
+                <li><a href="./pages/storydetail.html">storydetail</a></li>
+                <li><a href="./pages/storyComment.html">storyComment</a></li>
             </ul> 
         </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">의뢰 견적</h2>
             <ul>
-                <li><a href="/pages/request.html">request</a></li>
-                <li><a href="/pages/requestDetail.html">request_detail</a></li>
+                <li><a href="./pages/request.html">request</a></li>
+                <li><a href="./pages/requestDetail.html">request_detail</a></li>
             </ul>
         </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상품</h2>
             <ul>
-                <li><a href="/pages/productDetail.html">product_detail</a></li>
-                <li><a href="/pages/shoppingCart.html">shopping_cart</a></li>
+                <li><a href="./pages/productDetail.html">product_detail</a></li>
+                <li><a href="./pages/shoppingCart.html">shopping_cart</a></li>
             </ul>
         </div>
 
@@ -83,29 +83,29 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">로그인</h2>
             <ul>
-                <li><a href="/pages/login.html">로그인</a></li>
-                <li><a href="/pages/memberSearch.html">아이디찾기</a></li>
+                <li><a href="./pages/login.html">로그인</a></li>
+                <li><a href="./pages/memberSearch.html">아이디찾기</a></li>
             </ul>
         </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상품</h2>
             <ul>
-                <li><a href="/pages/mypage.html">mypage</a></li>
+                <li><a href="./pages/mypage.html">mypage</a></li>
            
-                <li><a href="/pages/live.html">live</a></li>   
-                <li><a href="/pages/notification.html">notification</a></li>
-                <li><a href="/pages/messenger.html">messenger</a></li>
+                <li><a href="./pages/live.html">live</a></li>   
+                <li><a href="./pages/notification.html">notification</a></li>
+                <li><a href="./pages/messenger.html">messenger</a></li>
             </ul>
         </div>
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">회원가입</h2>
             <ul>
-                <li><a href="/pages/member/step1.html">step1</a></li>
-                <li><a href="/pages/member/step2.html">step2</a></li>
-                <li><a href="/pages/member/step3.html">step3</a></li>
-                <li><a href="/pages/member/step4.html">step4</a></li>
+                <li><a href="./pages/member/step1.html">step1</a></li>
+                <li><a href="./pages/member/step2.html">step2</a></li>
+                <li><a href="./pages/member/step3.html">step3</a></li>
+                <li><a href="./pages/member/step4.html">step4</a></li>
             </ul>
         </div>
 
