--- a/pages/channelQuestion.html
+++ b/pages/channelQuestion.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
 
@@ -14,7 +14,7 @@
 <body>
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="/img/back_btn.png" alt="">
+            <img src="../img/back_btn.png" alt="">
         </button>
 
         <div class="story_tit">
@@ -22,7 +22,7 @@
         </div>
 
         <button class="right_btn">
-            <img src="/img/setting_plus.svg" alt="">
+            <img src="../img/setting_plus.svg" alt="">
         </button>
     </nav>
 
@@ -33,7 +33,7 @@
             채널문의하기
 
             <button class="close_btn">
-                <img src="/img/close_btn.svg" alt="">
+                <img src="../img/close_btn.svg" alt="">
             </button>
         </div>
 
