--- a/pages/login.html
+++ b/pages/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
@@ -18,7 +18,7 @@
 
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="/img/close_btn.svg" alt="">
+            <img src="../img/close_btn.svg" alt="">
         </button>
 
         <div class="story_tit">
@@ -30,7 +30,7 @@
     <div class="login_wrap">
         <form class="row">
             
-            <img class="logo" src="/img/logo.svg" alt="logo">
+            <img class="logo" src="../img/logo.svg" alt="logo">
 
             <div class="member_btn_wrap">
                 <ul>
@@ -70,9 +70,9 @@
 
             <ul class="other_login">
                 <li class="kakao">
-                    <img src="/img/kakao.svg" alt="카카오톡 로그인"/>
+                    <img src="../img/kakao.svg" alt="카카오톡 로그인"/>
                 </li>
-                <li class="naver"><img src="/img/naver.svg" alt="네이버 로그인"/></li>
+                <li class="naver"><img src="../img/naver.svg" alt="네이버 로그인"/></li>
                 <li class="google">
                     <span>G</span>
                 </li>
