--- a/pages/memberSearch.html
+++ b/pages/memberSearch.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 <body>
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="/img/close_btn.svg" alt="">
+            <img src="../img/close_btn.svg" alt="">
         </button>
 
         <div class="story_tit">
