--- a/pages/main.html
+++ b/pages/main.html
@@ -13,12 +13,49 @@
       type="text/css"
     />
     <link rel="stylesheet" href="../css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 
 </head>
 <body>
+
+    <header id="navbar">
+        <div class="row">
+            <div class="navbar">
+                <div class="left">
+                    <button>
+                        <img src="/img/header_btn_search@1x.png"
+                        srcset="/img/header_btn_search@1x.png 1x,
+                        /img/header_btn_search@2x.png 2x,
+                        /img/header_btn_search@3x.png 3x" />
+                    </button>
+                </div>
+
+                <div class="center">
+                    인헌길 7<i class="fas fa-chevron-down"></i>
+                </div>
+        
+                <div class="right">
+                    <button>
+                        <img src="/img/header_btn_bell@1x.png"
+                        srcset="/img/header_btn_bell@1x.png 1x,
+                        /img/header_btn_bell@2x.png 2x,
+                        /img/header_btn_bell@3x.png 3x" />
+                    </button>
+            
+                    <button>
+                        <img src="/img/header_btn_shopping_cart@1x.png"
+                        srcset="/img/header_btn_shopping_cart@1x.png 1x,
+                        /img/header_btn_shopping_cart@2x.png 2x,
+                        /img/header_btn_shopping_cart@3x.png 3x" />
+                    </button>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <div class="wrap main_wrap">
 
         <!--상단배너-->
