--- a/pages/store/storeinfo.html
+++ b/pages/store/storeinfo.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
 </head>
 <body>
     <nav class="detail_page_top">
         <button class="back_btn">
-            <img src="../img/back_btn.png" alt="">
+            <img src="../../img/back_btn.png" alt="">
         </button>
 
         <span>상점정보</span>
 
         <button class="shopping_cart_btn">
-            <img src="../img/shopping_cart.png" alt="">
+            <img src="../../img/shopping_cart.png" alt="">
         </button>   
     </nav>
 
@@ -25,7 +25,7 @@
         
         <div class="storeinfo_info_top">
             <div class="detailpage_img_wrap">
-                <img src="../img/no_image.jpg"/>
+                <img src="../../img/no_image.jpg"/>
             </div>
 
             <div class="storeinfo_info_content">
@@ -41,28 +41,28 @@
 
                     <div class="store_detail_info">
                         <div>
-                            <img src="../img/Union.png"/>
+                            <img src="../../img/Union.png"/>
                             <span>356</span>
                         </div>
                         <div>
-                            <img src="../img/Union.png"/>
+                            <img src="../../img/Union.png"/>
                             <span>356</span>
                         </div>
                     </div>
 
                     <div class="store_contact_info">
                         <div>
-                            <img src="../img/video.svg" />
+                            <img src="../../img/video.svg" />
                             <span>라이브 ON </span>
                         </div>
 
                         <div>
-                            <img src="../img/call.svg" />
+                            <img src="../../img/call.svg" />
                             <span>전화</span>
                         </div>
 
                         <div>
-                            <img src="../img/chatting.svg" />
+                            <img src="../../img/chatting.svg" />
                             <span>채팅</span>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                     <div class="row">
                         <div class="list">
                             <div class="title">
-                                <img src="../img/store_info.svg" alt="">
+                                <img src="../../img/store_info.svg" alt="">
                                 가게정보
                             </div>
 
@@ -113,7 +113,7 @@
 
                         <div class="list">
                             <div class="title">
-                                <img src="../img/keyword.svg" alt="">
+                                <img src="../../img/keyword.svg" alt="">
                                 분류 키워드
                             </div>
 
@@ -124,7 +124,7 @@
 
                         <div class="list">
                             <div class="title">
-                                <img src="../img/park.svg" alt="">
+                                <img src="../../img/park.svg" alt="">
                                 주차장 정보
                             </div>
 
@@ -139,13 +139,13 @@
                                         <p>반경 2km 이내</p>
                                     </li>
                                 </ul>
-                                <p>서울특별시 금천구 독산로 36나길<img src="../img/map_icon.svg" alt=""></p>
+                                <p>서울특별시 금천구 독산로 36나길<img src="../../img/map_icon.svg" alt=""></p>
                             </div>
                         </div>
 
                         <div class="list">
                             <div class="title">
-                                <img src="../img/delivery.svg" alt="">
+                                <img src="../../img/delivery.svg" alt="">
                                 배송 정보
                             </div>
 
@@ -157,7 +157,7 @@
 
                         <div class="list">
                             <div class="title">
-                                <img src="../img/payment.svg" alt="">
+                                <img src="../../img/payment.svg" alt="">
                                 결제 정보
                             </div>
 
