--- a/pages/store/storeProduct.html
+++ b/pages/store/storeProduct.html
@@ -83,7 +83,7 @@
             </div>
 
             <div class="storeinfo_tab_cnt">
-
+                <!--상품목록-->
                 <div class="store_product_list row">
 
                     <div class="list">
@@ -191,6 +191,7 @@
                         </div>
                     </div>
                 </div>
+                <!--//상품목록-->
 
             </div>
         </div>
