--- a/pages/main.html
+++ b/pages/main.html
@@ -32,6 +32,11 @@
                         /img/header_btn_search@3x.png 3x" />
                     </button>
                 </div>
+
+                <div class="center">
+                    <span>인헌길 7</span>
+                    <i class="fas fa-chevron-down"></i>
+                </div>
         
                 <div class="right">
                     <button>
