--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
         </div>
 
         <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">주문 정보</h2>
+            <ul>
+                <li><a href="./pages/order/orderList.html">주문내역</a></li>
+                <li><a href="./pages/order/orderDetail.html">주문상세</a></li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">위치설정</h2>
             <ul>
                 <li><a href="./pages/position/positionSearch.html">위치검색</a></li>
