--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <li><a href="./pages/channelInfo.html">channelInfo</a></li>
                 <li><a href="./pages/channel_member.html">channel_member</a></li>
                 <li><a href="./pages/channelQuestion.html">channelQuestion</a></li>
+                li><a href="./pages/channel/channelSetting.html">채널설정</a></li>
             </ul> 
         </div>
 
