--- a/pages/channelInfo.html
+++ b/pages/channelInfo.html
@@ -19,11 +19,25 @@
             <span>채널 정보</span>
         </div>
 
-        <button class="right_btn">
-            <img src="../img/setting_plus.svg" alt="">
-        </button>
-    </nav>
+        <div class="right">
+            <button>
+                <img src="../img/setting_plus.svg" alt="">
+            </button>
 
+
+            <div class="channel_menu">
+                <ul>
+                    <li><a href="#">채널 설정</a></li>
+                    <li><a href="#">회원 관리</a></li>
+                    <li><a href="#">공지 등록</a></li>
+                    <li><a href="#">스토리 등록</a></li>
+                    <li><a href="#">구독자 관리</a></li>
+                </ul>
+            </div>
+        </div>
+
+    </nav>
+ 
     <div class="channel_info_wrap">
 
         <div class="info">
