--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
         </div>
 
 
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">회원정보</h2>
+            <ul>
+                <li><a href="./pages/memberInfo/memberInfo.html">회원정보</a></li>
+            </ul>
+        </div>
+
+
     </div>
 
 </body>
