--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
             <h2 style="font-size: 15px;">회원정보</h2>
             <ul>
                 <li><a href="./pages/memberInfo/memberInfo.html">회원정보</a></li>
+                <li><a href="./pages/memberInfo/memberSetting.html">회원설정</a></li>
+                <li><a href="./pages/memberInfo/infoPrivate.html">회원설정_정보여부</a></li>
+                <li><a href="./pages/memberInfo/positionPrivate.html">회원설정_위치여부</a></li>
             </ul>
         </div>
 
