--- a/pages/mypage.html
+++ b/pages/mypage.html
@@ -87,7 +87,7 @@
         </div>
 
 
-        <div class="mypage_bottom">
+        <div class="page_bottom_list">
 
             <div>
                 <div>
