--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </ul>
         </div>
 
+
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">주문 정보</h2>
             <ul>
@@ -73,6 +74,13 @@
                 <li><a href="./pages/channelQuestion.html">channelQuestion</a></li>
                 li><a href="./pages/channel/channelSetting.html">채널설정</a></li>
             </ul> 
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">스토리</h2>
+            <ul>
+                <li><a href="./pages/sotry/storyList.html">스토리리스트</a></li>
+            </ul>
         </div>
 
 
@@ -138,6 +146,14 @@
                 <li><a href="./pages/memberInfo/memberSetting.html">회원설정</a></li>
                 <li><a href="./pages/memberInfo/infoPrivate.html">회원설정_정보여부</a></li>
                 <li><a href="./pages/memberInfo/positionPrivate.html">회원설정_위치여부</a></li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">통합검색</h2>
+            <ul>
+                <li><a href="./pages/search/intergrateSearch.html">통합검색페이지</a></li>
+                <li><a href="./pages/search/searchEmpty.html">통합검색페이지_empty</a></li>
             </ul>
         </div>
 
