--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
             <ul>
                 <li><a href="./pages/order/orderList.html">주문내역</a></li>
                 <li><a href="./pages/order/orderDetail.html">주문상세</a></li>
+                <li><a href="./pages/order/refundList.html">환불리스트</a></li>
+                <li><a href="./pages/order/refundDetail.html">환불상세</a></li>
             </ul>
         </div>
 
