--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
             </ul>
         </div>
 
+        <div style="margin-bottom: 20px;">
+            <h2 style="font-size: 15px;">모달팝업</h2>
+            <ul>
+                <li><a href="./pages/modal/modalConfirm.html">확인모달</a></li>
+                <li><a href="./pages/modal/modalAlert.html">얼러트모달</a></li>
+            </ul>
+        </div>
+
 
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">주문 정보</h2>
