--- a/pages/order/orderList.html
+++ b/pages/order/orderList.html
@@ -17,10 +17,20 @@
             <img src="../../img/back_btn.png" alt="">
         </button>
 
-        <span>주문내역</span>
+        <span>주문내역관리</span>
     </nav>
 
-    <div class="wrap">
+    <div class="wrap tab_btn_wrap orderlist">
+        <ul>
+            <li class="on">신청 (0)</li>
+            <li>대기 (0)</li>
+            <li>결제 (0)</li>
+            <li>완료 (0)</li>
+        </ul>
+    </div>
+
+
+    <div>
 
         <!--주문내역리스트-->
         <div class="orderList_wrap">
