--- a/pages/channelList.html
+++ b/pages/channelList.html
@@ -256,11 +256,11 @@
                             </p>
 
                             <div class="channel_detail">
-                                <div class="list_detail_info">
+                                <div class="list_detail_info background">
                                     <img src="../img/people_8px.svg" alt="">55
                                 </div>
 
-                                <div class="list_detail_info">
+                                <div class="list_detail_info background">
                                     <img src="../img/heart_8px.svg" alt="">55
                                 </div>
                             </div>
@@ -294,11 +294,11 @@
                             </p>
 
                             <div class="channel_detail">
-                                <div class="list_detail_info">
+                                <div class="list_detail_info background">
                                     <img src="../img/people_8px.svg" alt="">55
                                 </div>
 
-                                <div class="list_detail_info">
+                                <div class="list_detail_info background">
                                     <img src="../img/heart_8px.svg" alt="">55
                                 </div>
                             </div>
@@ -332,11 +332,11 @@
                             </p>
 
                             <div class="channel_detail">
-                                <div class="list_detail_info">
+                                <div class="list_detail_info background">
                                     <img src="../img/people_8px.svg" alt="">55
                                 </div>
 
-                                <div class="list_detail_info">
+                                <div class="list_detail_info background">
                                     <img src="../img/heart_8px.svg" alt="">55
                                 </div>
                             </div>
