--- a/pages/search/intergrateSearch.html
+++ b/pages/search/intergrateSearch.html
@@ -70,11 +70,11 @@
                     </p>
 
                     <div class="channel_detail">
-                        <div class="list_detail_info">
+                        <div class="list_detail_info background">
                             <img src="../../img/people_8px.svg" alt="">55
                         </div>
 
-                        <div class="list_detail_info">
+                        <div class="list_detail_info background">
                             <img src="../../img/heart_8px.svg" alt="">55
                         </div>
                     </div>
@@ -108,11 +108,11 @@
                     </p>
 
                     <div class="channel_detail">
-                        <div class="list_detail_info">
+                        <div class="list_detail_info background">
                             <img src="../../img/people_8px.svg" alt="">55
                         </div>
 
-                        <div class="list_detail_info">
+                        <div class="list_detail_info background">
                             <img src="../../img/heart_8px.svg" alt="">55
                         </div>
                     </div>
@@ -146,11 +146,11 @@
                     </p>   
 
                     <div class="channel_detail">
-                        <div class="list_detail_info">
+                        <div class="list_detail_info background">
                             <img src="../../img/people_8px.svg" alt="">55
                         </div>
 
-                        <div class="list_detail_info">
+                        <div class="list_detail_info background">
                             <img src="../../img/heart_8px.svg" alt="">55
                         </div>
                     </div>
