--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                 <li><a href="./pages/channelInfo.html">channelInfo</a></li>
                 <li><a href="./pages/channel_member.html">channel_member</a></li>
                 <li><a href="./pages/channelQuestion.html">channelQuestion</a></li>
-                li><a href="./pages/channel/channelSetting.html">채널설정</a></li>
+                <li><a href="./pages/channel/channelSetting.html">채널설정</a></li>
+                <li><a href="./pages/channel/chnnelSubscriber.html">채널 구독자</a></li>
             </ul> 
         </div>
 
