--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
             <h2 style="font-size: 15px;">채널</h2>
             <ul>
                 <li><a href="./pages/channelList.html">channelList</a></li>
-                <li><a href="./pages/channelInfo.html">channelInfo</a></li>
+                <li><a href="./pages/channel/channelInfo.html">채널 상세</a></li>
                 <li><a href="./pages/channel_member.html">channel_member</a></li>
                 <li><a href="./pages/channelQuestion.html">channelQuestion</a></li>
                 <li><a href="./pages/channel/channelSetting.html">채널설정</a></li>
                 <li><a href="./pages/channel/chnnelSubscriber.html">채널 구독자</a></li>
+                <li><a href="./pages/channel/channelMessage.html">채널 메세지</a></li>
+                <li><a href="./pages/channel/channelNotice.html">채널 공지 리스트</a></li>
             </ul> 
         </div>
 
