--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                 <li><a href="./pages/channel/chnnelSubscriber.html">채널 구독자</a></li>
                 <li><a href="./pages/channel/channelMessage.html">채널 메세지</a></li>
                 <li><a href="./pages/channel/channelNotice.html">채널 공지 리스트</a></li>
+                <li><a href="./pages/channel/channelNoticeRegist.html">채널 공지 등록</a></li>
+
+
             </ul> 
         </div>
 
