--- a/pages/product/productRegistration.html
+++ b/pages/product/productRegistration.html
@@ -103,7 +103,62 @@
             </div>
 
             <div class="list">
+                <div class="request_list ">
+                    <div class="tag_regist">
+                        <span>#</span>
 
+                        <input type="text" placeholder="태그를 입력하세요" class="default_type"/>
+        
+                        <button>
+                            태그등록
+                        </button>
+                    </div>
+
+                    <div class="tag_list_wrap">
+                        <div>#태그등록</div>
+                        <div>#태그등록</div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="list">
+                <div class="request_list price" style="margin-bottom: 0;">
+                    <span>￦</span>
+                    <input type="text" class="default_type" placeholder="상품원가를 입력하세요.">
+                </div>
+                <div class="tip">원가 정보는 외부 표기가 되지 않습니다.</div>
+            </div>
+
+            <div class="list">
+                <div class="request_list price">
+                    <span>￦</span>
+                    <input type="text" class="default_type" placeholder="판매가를 입력하세요">
+                </div>
+            </div>
+
+
+            <div class="list">
+                <p>배송비 포함 여부</p>
+                <div class="choice_wrap">
+                    <div class="radio_btn_wrap">
+                        <input id="product_kind_01" type="radio" checked="checked">
+                        <label for="product_kind_01">
+                            <div><span></span></div>
+                            <p class="tit">포함</p>
+                        </label>
+                    </div>
+
+                    <div class="radio_btn_wrap">
+                        <input id="product_kind_02" type="radio">
+                        <label for="product_kind_02">
+                            <div><span></span></div>
+                            <p class="tit">미포함</p>
+                        </label>
+                    </div>
+
+
+                </div>
             </div>
 
         </div>
