--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
         <div style="margin-bottom: 20px;">
             <h2 style="font-size: 15px;">상품</h2>
             <ul>
-                <li><a href="./pages/product/productRegistration.html">상품등록</a></li>
+                <li><a href="./pages/product/productRegistration_01.html">상품등록01</a></li>
+                <li><a href="./pages/product/productRegistration_02.html">상품등록02</a></li>
+                <li><a href="./pages/product/productRegistration_03.html">상품등록03</a></li>
                 <li><a href="./pages/productDetail.html">product_detail</a></li>
                 <li><a href="./pages/shoppingCart.html">shopping_cart</a></li>
             </ul>
